# chimera_logging

./: README.md  setup.cfg
examples/: basic_usage.py  enhanced_logging.py  firehose_logging.py
src/chimera_logging/: __init__.py  config.py  formatters.py  handlers.py  logger.py  utils.py
tests/: test_formatters.py  test_handlers.py  test_logger.py  test_utils.py
