[metadata]
name = chimera_logging
version = 0.0.1
description = Log handler that formats logs and ships to firewhose
author = Matt Peters
license = MIT
classifiers =
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.10
    Intended Audience :: Developers
    Topic :: System :: Logging
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = chimera_logging
package_dir =
    chimera_logging = src/chimera_logging
python_requires = >=3.10
install_requires =

[options.package_data]
chimera_logging = ["py.typed"]

[options.extras_require]
dev =
    python-dotenv>=0.21.0
    pytest>=7.0.0
    pytest-cov>=4.0.0
