[metadata]
name = chimera_logging
version = 0.0.1
description = A powerful Python logging system that combines structured logging with AWS Kinesis Firehose integration
long_description = file: README.md
long_description_content_type = text/markdown
author = Matt Peters
license = MIT
project_urls =
    Source = https://github.com/mattpeters/chimera_logging
    Bug Tracker = https://github.com/mattpeters/chimera_logging/issues
keywords = 
    logging
    aws
    firehose
    structured-logging
    json-logging
    cloud-logging
classifiers =
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.10
    Intended Audience :: Developers
    Topic :: System :: Logging
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    boto3>=1.35.63
    python-dotenv>=0.21.0

[options.packages.find]
where = src

[options.package_data]
chimera_logging = ["py.typed"]

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
